[gd_scene load_steps=6 format=3 uid="uid://b2ii1435ae0tl"]

[ext_resource type="Theme" uid="uid://buv5pymjub15j" path="res://Lobby/Lobby.tres" id="1_h38af"]
[ext_resource type="Script" path="res://Gui/VideoMenu.gd" id="2_fme5l"]
[ext_resource type="Texture2D" uid="uid://w0ly7hvr6rgv" path="res://Gui/BottomFrame.png" id="3_8ofnk"]
[ext_resource type="Texture2D" uid="uid://dunjtkadfts2m" path="res://Gui/pin.svg" id="4_7lxhr"]
[ext_resource type="Texture2D" uid="uid://bgk2040ne7lxy" path="res://Gui/pin-off.svg" id="5_u2vm3"]

[node name="VideoMenu" type="BoxContainer" groups=["started", "video"]]
z_index = 1
texture_filter = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -225.0
offset_right = 275.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_h38af")
theme_override_constants/separation = 6
script = ExtResource("2_fme5l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Titel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Video Options"
horizontal_alignment = 1

[node name="Separator" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_8ofnk")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 9
columns = 3

[node name="FullscreenLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 2
vertical_alignment = 2

[node name="FullscreenCheck" type="CheckButton" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
flat = true
alignment = 1

[node name="FullscreenValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Off"
vertical_alignment = 2

[node name="OptimizeLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Optimize Settings InGame"
horizontal_alignment = 2
vertical_alignment = 2

[node name="OptimizeCheck" type="CheckButton" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
flat = true
alignment = 1

[node name="OptimizeValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Off"
vertical_alignment = 2

[node name="DofLabel2" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Depth of Field"
horizontal_alignment = 2
vertical_alignment = 2

[node name="DofCheck" type="CheckButton" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
flat = true
alignment = 1

[node name="DofValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Off"
vertical_alignment = 2

[node name="ReflectionLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Reflections
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ReflextionsCheck" type="CheckButton" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
flat = true
alignment = 1

[node name="ReflectionsValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Off"
vertical_alignment = 2

[node name="ParticlesLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Particles
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ParticlesCheck" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 2.0
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="ParticlesValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Off"
vertical_alignment = 2

[node name="HighDistanceLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Camera Distance"
horizontal_alignment = 2
vertical_alignment = 2

[node name="HighDistanceCheck" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 2.0
value = 1.0
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="HighDistanceValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Far Enough"
vertical_alignment = 2

[node name="MSAALabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "MSAA"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MSAACheck" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
scrollable = false
tick_count = 4
ticks_on_borders = true

[node name="MSAAValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "4"
vertical_alignment = 2

[node name="FSRLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "FidelityFX Super Resolution"
horizontal_alignment = 2
vertical_alignment = 2

[node name="FSRCheck" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 4.0
value = 4.0
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="FSRValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(81, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ultra Quality"
vertical_alignment = 2

[node name="Separator2" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_8ofnk")
expand_mode = 2
flip_v = true

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
text = "Done!"

[node name="FPS" type="CheckButton" parent="ColorRect"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 47.0
size_flags_vertical = 0
theme = ExtResource("1_h38af")
theme_override_constants/h_separation = 7
theme_override_icons/checked = ExtResource("4_7lxhr")
theme_override_icons/unchecked = ExtResource("5_u2vm3")
text = "100fps"
flat = true
alignment = 2
icon_alignment = 1
expand_icon = true

[node name="FpsTimer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/OptimizeCheck" to="." method="_on_optimize_check_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/DofCheck" to="." method="_on_dof_check_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/ReflextionsCheck" to="." method="_on_reflextions_check_toggled"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/ParticlesCheck" to="." method="_on_particles_check_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/HighDistanceCheck" to="." method="_on_high_distance_check_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/MSAACheck" to="." method="_on_msaa_check_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/GridContainer/FSRCheck" to="." method="_on_fsr_check_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer2/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="toggled" from="ColorRect/FPS" to="." method="_on_fps_toggled"]
[connection signal="timeout" from="FpsTimer" to="." method="update_fps"]
